<?xml version="1.0"?>
<package format="3">
  <name>lidar_bringup</name>
  <version>0.1.0</version>
  <description>Bringup package for Livox MID-360 on ROS 2.</description>
  <maintainer email="user@example.com">sangyuwan</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>livox_ros_driver2</exec_depend>
  <exec_depend>fast_lio</exec_depend>
  <exec_depend>lidar_map_localization</exec_depend>
  <exec_depend>lidar_localization</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
