<?xml version="1.0"?>
<package format="3">
  <name>lidar_localization</name>
  <version>0.1.0</version>
  <description>LiDAR pose interface nodes for MID-360 localization.</description>
  <maintainer email="user@example.com">sangyuwan</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
