<?xml version="1.0"?>
<package format="3">
  <name>lidar_map_localization</name>
  <version>0.1.0</version>
  <description>PCD map based relocalization for FAST-LIO MID-360 odometry.</description>
  <maintainer email="user@example.com">sangyuwan</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
